Emp info functionality added

--- a/app/src/main/res/layout/content_profile_edit_emp_info.xml
+++ b/app/src/main/res/layout/content_profile_edit_emp_info.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".profile.view.ProfileEditEmpInfo"
+    tools:context=".profile.view.ProfileEditEmpInfoActivity"
     tools:showIn="@layout/activity_profile_edit_emp_info">
 
 
