--- a/app/src/main/res/layout/content_loan_history_details.xml
+++ b/app/src/main/res/layout/content_loan_history_details.xml
@@ -6,13 +6,16 @@
     android:layout_height="wrap_content"
     android:background="@color/screenBackground"
     android:id="@+id/rlRoot"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".loanHistory.view.LoanHistoryDetailsActivity"
+    tools:showIn="@layout/activity_loan_history_details"
    >
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fillViewport="true"
-        android:layout_marginTop="?attr/actionBarSize"
+
         >
 
         <RelativeLayout
