--- a/app/src/main/res/drawable/bg_drawer_item.xml
+++ b/app/src/main/res/drawable/bg_drawer_item.xml
@@ -10,7 +10,7 @@
             <solid android:color="@color/colorSemiLightBlack"/>
         </shape>
     </item>
-    <item android:bottom="@dimen/_1sdp">
+    <item android:bottom="1px">
         <shape android:shape="rectangle">
             <solid android:color="@color/colorWhite"/>
         </shape>
