--- a/app/src/main/res/drawable/bg_drawer_item.xml
+++ b/app/src/main/res/drawable/bg_drawer_item.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@color/colorSemiWhite" android:state_checked="true" />
+    <item android:drawable="@android:color/transparent" />
+</selector>
+<!--
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
@@ -15,4 +20,4 @@
             <solid android:color="@color/colorWhite"/>
         </shape>
     </item>
-</layer-list>
+</layer-list>-->
